--- a/SpringJavaConfiguration/pom.xml
+++ b/SpringJavaConfiguration/pom.xml
@@ -33,6 +33,12 @@
 	</dependency>
 	
 	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-jdbc</artifactId>
+	    <version>5.2.18.RELEASE</version>
+	</dependency>
+	
+	<dependency>
 	    <groupId>org.xerial</groupId>
 	    <artifactId>sqlite-jdbc</artifactId>
 	    <version>3.36.0.3</version>
